syntax = "proto3";
package dymensionxyz.dymension.lightclient;

option go_package = "github.com/dymensionxyz/dymension/v3/x/lightclient/types";

message GenesisState {
    repeated CanonicalClient canonical_clients = 1;
    repeated ConsensusStateSigner consensus_state_signers = 2;
}

message CanonicalClient {
    string rollapp_id = 1;
    string ibc_client_id = 2;
}

message ConsensusStateSigner {
    string ibc_client_id = 1;
    uint64 height = 2;
    string signer = 3;
}